[gd_scene load_steps=52 format=3 uid="uid://dr6cpm16uti0a"]

[ext_resource type="Script" uid="uid://vmi3dp6gjx5r" path="res://Scripts/Feed.gd" id="1_vlf4v"]
[ext_resource type="Script" uid="uid://bexi2weyp18cf" path="res://Scripts/sidebar.gd" id="2_bdj8h"]
[ext_resource type="FontFile" uid="uid://cg2bp20jowkno" path="res://images/Poppins-Bold.ttf" id="3_bh8uc"]
[ext_resource type="Texture2D" uid="uid://dhgywxqad8kdv" path="res://images/house.png" id="4_lbn8v"]
[ext_resource type="Texture2D" uid="uid://dkdrxt2l2gnf8" path="res://images/messages.png" id="5_rw3wl"]
[ext_resource type="Texture2D" uid="uid://8gbgabwnt1u1" path="res://images/notification.png" id="6_t7j1k"]
[ext_resource type="Texture2D" uid="uid://c71ntu4v1208n" path="res://images/settings.png" id="7_et7ox"]
[ext_resource type="Texture2D" uid="uid://c4ojethx5ylw5" path="res://images/profilo.png" id="8_pvruj"]
[ext_resource type="Script" uid="uid://uwe66u3xmxgb" path="res://Scripts/indicators.gd" id="9_26a88"]
[ext_resource type="Texture2D" uid="uid://22bavs02n1so" path="res://images/brain64.png" id="10_mtg2k"]
[ext_resource type="Texture2D" uid="uid://bc2v2hk4g5v8e" path="res://images/empatia.png" id="11_wp8tk"]
[ext_resource type="Texture2D" uid="uid://b5c6kkihy1obt" path="res://images/lock64.png" id="12_ffk1g"]
[ext_resource type="Texture2D" uid="uid://cqmwglm3vm840" path="res://images/tempo64.png" id="13_vkhmq"]
[ext_resource type="Texture2D" uid="uid://y634rj4ffbkk" path="res://images/idea (2).png" id="14_iqc2e"]
[ext_resource type="Script" uid="uid://wuikf1y7i3h2" path="res://Scripts/effects_layer.gd" id="15_vwwx2"]
[ext_resource type="Script" uid="uid://tacvhtv7y51n" path="res://Scripts/achievement_popup.gd" id="16_cqpfx"]

[sub_resource type="Gradient" id="Gradient_eiy7p"]
offsets = PackedFloat32Array(0, 0.311688, 0.681818, 1)
colors = PackedColorArray(0.960784, 0.521569, 0.160784, 1, 0.866667, 0.164706, 0.482353, 1, 0.505882, 0.203922, 0.686275, 1, 0.317647, 0.356863, 0.831373, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u5vha"]
gradient = SubResource("Gradient_eiy7p")

[sub_resource type="LabelSettings" id="LabelSettings_0eyb3"]
font = ExtResource("3_bh8uc")
font_size = 35
font_color = Color(0.137255, 0.372549, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj288"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rj8w1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5vha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6u5n"]
bg_color = Color(0, 0, 0, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lryug"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoqp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tka1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0vxv"]
bg_color = Color(0, 0, 0, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxfre"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_535ex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6b05h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovler"]
bg_color = Color(0, 0, 0, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evp1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0enty"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iqlf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p333c"]
bg_color = Color(0, 0, 0, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3unk"]
bg_color = Color(0.819608, 0.898039, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2u3o"]
bg_color = Color(0.819608, 0.898039, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idamg"]
bg_color = Color(0.819608, 0.898039, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igd52"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouxst"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0eyb3"]
bg_color = Color(0.137255, 0.372549, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_og6dy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bbnt"]
bg_color = Color(0.199296, 0.600865, 0.291864, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50xdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogxe3"]
bg_color = Color(0.520935, 0.295865, 0.813684, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l57vo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqlfk"]
bg_color = Color(0.909804, 0.184314, 0.211765, 1)
corner_detail = 1

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u5vha"]
load_path = "res://.godot/imported/fireworks.png-4b25ed33383db03930ae88fbc4120681.ctex"

[sub_resource type="Gradient" id="Gradient_u5vha"]
offsets = PackedFloat32Array(0, 0.530864, 1)
colors = PackedColorArray(1, 0.921912, 0.292332, 1, 1, 0.435294, 0, 1, 1, 1, 1, 0)

[sub_resource type="FontVariation" id="FontVariation_ovler"]
variation_embolden = 0.5

[sub_resource type="LabelSettings" id="LabelSettings_u5vha"]
font = SubResource("FontVariation_ovler")
font_size = 20
font_color = Color(0, 0, 0, 1)

[node name="Feed" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vlf4v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_u5vha")
stretch_mode = 6

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sidebar" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 80
script = ExtResource("2_bdj8h")
bg_color = Color(1, 1, 1, 1)

[node name="Title" type="Label" parent="MainContainer/Sidebar"]
layout_mode = 2
size_flags_vertical = 0
text = "NetAware"
label_settings = SubResource("LabelSettings_0eyb3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" type="Button" parent="MainContainer/Sidebar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_qj288")
theme_override_styles/hover = SubResource("StyleBoxFlat_rj8w1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u5vha")
theme_override_styles/normal = SubResource("StyleBoxFlat_g6u5n")
text = "Home"
icon = ExtResource("4_lbn8v")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Messaggi" type="Button" parent="MainContainer/Sidebar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_lryug")
theme_override_styles/hover = SubResource("StyleBoxFlat_xoqp3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tka1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_p0vxv")
text = "Messaggi"
icon = ExtResource("5_rw3wl")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Notifiche" type="Button" parent="MainContainer/Sidebar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_pxfre")
theme_override_styles/hover = SubResource("StyleBoxFlat_535ex")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6b05h")
theme_override_styles/normal = SubResource("StyleBoxFlat_ovler")
text = "Notifiche"
icon = ExtResource("6_t7j1k")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Impostazioni" type="Button" parent="MainContainer/Sidebar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_evp1m")
theme_override_styles/hover = SubResource("StyleBoxFlat_0enty")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3iqlf")
theme_override_styles/normal = SubResource("StyleBoxFlat_p333c")
text = "Impostazioni
"
icon = ExtResource("7_et7ox")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ProfileButton" type="Button" parent="MainContainer/Sidebar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_hover_color = Color(0.819608, 0.898039, 1, 1)
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_w3unk")
theme_override_styles/hover = SubResource("StyleBoxFlat_q2u3o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_idamg")
theme_override_styles/normal = SubResource("StyleBoxFlat_igd52")
text = "PROFILO
"
icon = ExtResource("8_pvruj")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="FeedColumn" type="ScrollContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 900)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
scroll_deadzone = 100

[node name="PostsContainer" type="VBoxContainer" parent="MainContainer/FeedColumn"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 500

[node name="Indicators" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 25
script = ExtResource("9_26a88")
bg_color = Color(1, 1, 1, 1)

[node name="INDC" type="Label" parent="MainContainer/Indicators"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 25
text = "Indicatori di consapevolezza"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/Indicators"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MainContainer/Indicators/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_mtg2k")
stretch_mode = 3

[node name="SC" type="Label" parent="MainContainer/Indicators/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 25
text = "Spirito Critico"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="P1" type="ProgressBar" parent="MainContainer/Indicators"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ouxst")
theme_override_styles/fill = SubResource("StyleBoxFlat_0eyb3")

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/Indicators"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MainContainer/Indicators/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("11_wp8tk")
stretch_mode = 3

[node name="EM" type="Label" parent="MainContainer/Indicators/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 25
text = "Empatia"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="P2" type="ProgressBar" parent="MainContainer/Indicators"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_og6dy")
theme_override_styles/fill = SubResource("StyleBoxFlat_8bbnt")

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/Indicators"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MainContainer/Indicators/HBoxContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("12_ffk1g")
stretch_mode = 3

[node name="PR" type="Label" parent="MainContainer/Indicators/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 25
text = "Privacy"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="P3" type="ProgressBar" parent="MainContainer/Indicators"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_50xdo")
theme_override_styles/fill = SubResource("StyleBoxFlat_ogxe3")

[node name="HBoxContainer4" type="HBoxContainer" parent="MainContainer/Indicators"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MainContainer/Indicators/HBoxContainer4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("13_vkhmq")
stretch_mode = 3

[node name="DIP" type="Label" parent="MainContainer/Indicators/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.137255, 0.372549, 1, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 25
text = "Dipendenza"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="P4" type="ProgressBar" parent="MainContainer/Indicators"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_l57vo")
theme_override_styles/fill = SubResource("StyleBoxFlat_fqlfk")

[node name="HBoxContainer5" type="HBoxContainer" parent="MainContainer/Indicators"]
layout_mode = 2
alignment = 1

[node name="IdeaButton" type="TextureButton" parent="MainContainer/Indicators/HBoxContainer5"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
disabled = true
texture_normal = ExtResource("14_iqc2e")
stretch_mode = 3

[node name="FeedbackLabel" type="Label" parent="MainContainer/Indicators/HBoxContainer5"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bh8uc")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 169
text_direction = 1

[node name="EffectsLayer" type="CanvasLayer" parent="."]
script = ExtResource("15_vwwx2")

[node name="Fireworks" type="CPUParticles2D" parent="EffectsLayer"]
position = Vector2(700, 0)
emitting = false
amount = 250
texture = SubResource("CompressedTexture2D_u5vha")
lifetime = 2.5
one_shot = true
explosiveness = 1.0
randomness = 0.3
local_coords = true
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 250.0
initial_velocity_max = 400.0
damping_max = 5.0
scale_amount_min = 0.5
scale_amount_max = 1.2
color_ramp = SubResource("Gradient_u5vha")

[node name="AchievementPopup" type="PopupPanel" parent="." groups=["achievement_popup"]]
script = ExtResource("16_cqpfx")

[node name="TextureRect" type="TextureRect" parent="AchievementPopup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="AchievementPopup"]
custom_minimum_size = Vector2(100, 20)
offset_left = 4.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 96.0
label_settings = SubResource("LabelSettings_u5vha")
horizontal_alignment = 1
autowrap_mode = 2
